
[package]
name = "mev"
version = "0.1.0"
edition = "2021"

[dependencies]
artemis-core = { git = "https://github.com/paradigmxyz/artemis" }
ethers = { version = "2", features = ["ws", "rustls"]}
tokio = { version = "1.18", features = ["full"] }
mev-share = "0.1.4"
async-trait = "0.1.64"
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
mev-share-bindings = { path = "./bindings" }
